# arkanoid

./: CMakeLists.txt  README.md  README_ru
include/: draw.h  game.h  meshes.h  resources.h  shaders.h  utils.h
include/native/: window.h
include/resources/: blip.h  coin.h  copyright.h  explosion.h  gameover.h  hit.h  laser.h  numbers.h  pressenter.h  pressspace.h  quit.h  return.h  score.h  version.h
resources/: copyright.tga  gameover.tga  numbers.tga  pressenter.tga  pressspace.tga  quit.tga  return.tga  score.tga  version.tga
src/: draw.c  game.c  meshes.c  meshes.c.old  shaders.c  sounds.c  textures.c  utils.c
